; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_caamrng.c_caam_rng_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_caamrng.c_caam_rng_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@init_done = common dso_local global i32 0, align 4
@rng_ctx = common dso_local global %struct.TYPE_3__* null, align 8
@caam_rng = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @caam_rng_exit() #0 {
  %1 = load i32, i32* @init_done, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @rng_ctx, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @caam_jr_free(i32 %7)
  %9 = call i32 @hwrng_unregister(i32* @caam_rng)
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** @rng_ctx, align 8
  %11 = call i32 @kfree(%struct.TYPE_3__* %10)
  br label %12

12:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @caam_jr_free(i32) #1

declare dso_local i32 @hwrng_unregister(i32*) #1

declare dso_local i32 @kfree(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
